# autoresearch

./: .gitignore  prepare.py  program.md  pyproject.toml  train.py
table_cropper/: .gitignore  ANNOTATION_PROTOCOL.md  README.md  RESEARCH_PLAN.md  TATR_TRAINING_PROGRESS.md  YOLO_TRAINING_PROGRESS.md  crop_tables.py  download_data.py  evaluate.py  experiment_runner.py  linked_region.py  pilot_evaluation.py  prepare_finetune_data.py  pubtables_adapter.py  pyproject.toml  resume_training.sh  train_all_yolo.sh  yolo_pipeline.py
table_cropper/docs/: PORTABILITY.md  RESEARCH_PLAN.md  TATR_TRAINING_PROGRESS.md
table_cropper/paper/: cover_letter.tex  generate_figures.py  main.tex
table_cropper/scripts/: _paths.py  bootstrap_ci.py  coco_eval.py  cross_dataset_eval.py  downstream_extraction.py  evaluate.py  experiment_runner.py  fine_tune.py  heuristic_sweep.py  prepare_finetune_data.py  robustness_analysis.py  upload_to_hf.py  yolo_infer_pdf.py  yolo_pipeline.py
table_cropper/src/: completeness_metrics.py
